# DAA-MicroBench

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
config/: defaults.yaml
docs/: BASELINES.md  DESIGN_V1.md  FOXGLOVE_DEMO.md  LEADERBOARD.md  LEARNED_POLICY_ADOPTION.md  LEARNED_SUBMISSION_SCHEMAS.md  PLANNER_API.md  PUBLIC_ALPHA_NOTES.md  README.md  RELEASE_CHECKLIST.md  RESULT_SUBMISSION.md  RL_INTERFACE.md  RL_STABLE_V1_FREEZE.md  SCENARIO_SUITES.md
examples/: exported_linear_policy.json  exported_policy.py  external_policy_callable_spec.json  external_policy_model_predict_spec.json  external_policy_spec.json  learned_submission_manifest_overlay_example.json  learned_submission_manifest_template.json  rl_external_policy_adapter.py  rl_random_policy.py  rl_train_tiny_linear_policy.py  simple_external_planner.py
golden/: README.md  results.csv  summary.csv
microbench/: acceptance.py  cli.py  config.py  runner.py  types.py
scripts/: ci_sanity.sh  package_smoke.sh  release_readiness.sh
tests/: test_3d_support.py  test_acceptance.py  test_advanced_baseline_comparison.py  test_agent_messages.py  test_agentic_planner_instances.py  test_baseline_audit.py  test_baseline_behavior.py  test_baseline_evidence.py  test_baseline_leaderboard.py  test_baseline_promotion.py  test_baseline_report.py  test_baseline_review.py  test_bvc_tube_dmpc.py  test_cbf_qp.py  test_ci_release_packaging.py  test_current_schema_golden.py  test_dmpc_best_response.py  test_dynamic_tube_dmpc.py  test_ego_swarm.py  test_ego_swarm_opt.py  test_episode_engine.py  test_external_policy_specs.py  test_foxglove_export.py  test_full_episode_trace.py  test_hard_case_mining.py  test_intent_plumbing.py  test_learned_policy_spec_planner.py  test_learned_submission_bundle.py  test_learned_tiny_baseline.py  test_mpc_local.py  (+23 more)
(+128 files in other folders)
