[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daa-microbench"
version = "0.1.0"
description = "Deterministic benchmark for agentic multi-drone detect-and-avoid planners"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["drones", "detect-and-avoid", "collision-avoidance", "multi-agent", "benchmark"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy==1.26.4",
  "PyYAML==6.0.1",
  "tqdm==4.66.4",
]

[project.optional-dependencies]
ml = [
  "torch>=2.3,<2.7",
]
rl = [
  "gymnasium>=0.29,<1.1",
  "pettingzoo>=1.24,<1.26",
]
viz = [
  "matplotlib==3.8.4",
  "plotly>=5.24,<6",
]
foxglove = [
  "mcap>=1.2,<2",
]
opt = [
  "scipy==1.12.0",
  "osqp==0.6.7.post3",
  "cvxpy==1.4.2",
  "numba==0.59.1",
]

[project.scripts]
microbench = "microbench.cli:main"
daa-microbench = "microbench.cli:main"

[project.urls]
Homepage = "https://github.com/mehrnazZz/DAA-MicroBench"
Documentation = "https://github.com/mehrnazZz/DAA-MicroBench#readme"
Issues = "https://github.com/mehrnazZz/DAA-MicroBench/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
microbench = [
  "bundled_config/*.yaml",
  "bundled_config/scenarios/*.yaml",
  "bundled_config/learned_baselines/*.json",
  "bundled_config/schemas/*.json",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["microbench*"]
